client application done

--- a/app/src/main/res/layout/fragment_edit_user_address.xml
+++ b/app/src/main/res/layout/fragment_edit_user_address.xml
@@ -33,7 +33,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/padding_margin_xlarge"
-                    android:hint="@string/your_name">
+                    android:hint="Имя">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/name_input"
