--- a/app/src/main/res/layout/fragment_basket.xml
+++ b/app/src/main/res/layout/fragment_basket.xml
@@ -17,12 +17,15 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvMedecineCartPriceList"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="610dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@+id/products_in_cart_layout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            tools:listitem="@layout/item_basket"
+            tools:visibility="visible" />
 
         <LinearLayout
             android:id="@+id/no_products_in_basket_layout"
@@ -30,7 +33,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical"
-            android:visibility="invisible"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -53,12 +56,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/padding_margin_medium"
-                android:layout_marginBottom="8dp"
+                android:layout_marginBottom="@dimen/padding_margin_medium"
                 android:fillAlpha="0.5"
                 android:gravity="center"
                 android:text="@string/select_product_and_add_to_basket"
                 android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:textSize="@dimen/text_normal" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/return_home"
@@ -82,13 +85,16 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:visibility="visible">
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/total_amount_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -103,26 +109,22 @@
                         android:id="@+id/total_amount"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginBottom="16dp"
+                        android:layout_marginStart="@dimen/padding_margin_xlarge"
+                        android:layout_marginTop="@dimen/padding_margin_medium"
                         android:text="Итого:"
                         android:textColor="@color/black"
                         android:textSize="@dimen/text_large"
-                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toBottomOf="@+id/second_divider" />
 
                     <com.google.android.material.textview.MaterialTextView
                         android:id="@+id/text_view_total_amount"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginEnd="16dp"
-                        android:layout_marginBottom="16dp"
+                        android:layout_marginTop="@dimen/padding_margin_medium"
+                        android:layout_marginEnd="@dimen/padding_margin_xlarge"
                         android:text="0.0"
                         android:textSize="@dimen/text_large"
-                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -135,21 +137,25 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/make_order_btn"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/padding_margin_xlarge"
+                        android:text="@string/make_order"
+                        android:textAllCaps="true"
+                        android:textColor="@color/black"
+                        android:textSize="@dimen/text_medium"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/total_amount" />
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </com.google.android.material.card.MaterialCardView>
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/make_order_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/padding_margin_medium"
-                android:layout_marginTop="@dimen/padding_margin_medium"
-                android:layout_marginEnd="@dimen/padding_margin_medium"
-                android:layout_marginBottom="@dimen/padding_margin_xlarge"
-                android:text="@string/make_order"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_medium"  />
+
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
