--- a/app/src/main/res/layout/fragment_change_password_user.xml
+++ b/app/src/main/res/layout/fragment_change_password_user.xml
@@ -44,6 +44,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:inputType="textPassword"
+                        android:maxLength="16"
                         android:textColor="@color/black" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -61,6 +62,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:inputType="textPassword"
+                        android:maxLength="16"
                         android:textColor="@color/black" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -78,6 +80,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:inputType="textPassword"
+                        android:maxLength="16"
                         android:textColor="@color/black" />
 
                 </com.google.android.material.textfield.TextInputLayout>
