--- a/app/src/main/res/layout/fragment_detail_medicine.xml
+++ b/app/src/main/res/layout/fragment_detail_medicine.xml
@@ -1,173 +1,214 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F5F5F5"
+    app:layoutDescription="@xml/fragment_detail_medicine_scene"
     tools:context=".fragments.home.detail.DetailMedicineFragment">
 
-    <ScrollView
-        android:id="@+id/medicine_scroll_view"
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/product_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent">
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/product_constraint_layout"
+        android:id="@+id/bottom_panel_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:elevation="@dimen/padding_margin_xlarge"
+        app:layout_constraintTop_toBottomOf="@+id/product_image">
 
-        <ImageView
-            android:id="@+id/product_image"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="0dp" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/add_cart_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/auth_button_height"
+            android:backgroundTint="@color/white"
+            android:text="@string/add_cart"
+            android:textAllCaps="true"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_small"
+            app:layout_constraintBottom_toBottomOf="@+id/choose_count_layout"
+            app:layout_constraintEnd_toEndOf="@+id/product_price"
+            app:layout_constraintTop_toTopOf="@+id/choose_count_layout" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/product_description"
+            android:id="@+id/product_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/padding_margin_xlarge"
+            android:layout_marginTop="@dimen/padding_margin_xlarge"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:text="Адицеф"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_medium"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/product_dosage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/padding_margin_medium"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:text="Капсулы 300x10"
+            android:textColor="@color/dark_gray"
+            android:textSize="@dimen/text_medium"
+            app:layout_constraintStart_toStartOf="@+id/product_title"
+            app:layout_constraintTop_toBottomOf="@+id/product_title" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/product_category"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="@dimen/padding_margin_xlarge"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:text="Категория препарата:"
+            android:textColor="@color/dark_gray"
+            android:textSize="@dimen/text_medium"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/product_dosage"
+            app:layout_constraintTop_toBottomOf="@+id/product_dosage" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/product_country"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/padding_margin_small"
+            android:ellipsize="end"
+            android:maxLines="2"
+            android:text="Палестина"
+            android:textColor="@color/dark_gray"
+            android:textSize="@dimen/text_medium"
+            app:layout_constraintStart_toEndOf="@+id/product_dosage"
+            app:layout_constraintTop_toTopOf="@+id/product_dosage" />
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/choose_count_layout"
+            android:layout_width="129dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/item_background"
+            app:cardCornerRadius="@dimen/padding_margin_medium"
+            app:layout_constraintStart_toStartOf="@+id/product_dosage"
+            app:layout_constraintTop_toBottomOf="@+id/product_category">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/minus_btn"
+                    style="@style/RoundButton"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    app:icon="@drawable/ic_minus"
+                    app:iconSize="32dp" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/count_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/padding_margin_medium"
+                    android:layout_marginEnd="@dimen/padding_margin_medium"
+                    android:text="1"
+                    android:textSize="@dimen/text_medium" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/plus_btn"
+                    style="@style/RoundButton"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    app:icon="@drawable/ic_plus"
+                    app:iconSize="32dp" />
+
+
+            </LinearLayout>
+        </com.google.android.material.card.MaterialCardView>
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/product_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_large"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/product_title"
+            app:layout_constraintTop_toTopOf="@+id/product_title" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/currency"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="бел. руб."
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_large"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@+id/add_cart_btn"
+            app:layout_constraintTop_toBottomOf="@+id/product_price" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/open_pdf_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/padding_margin_xlarge"
             android:layout_marginTop="@dimen/padding_margin_medium"
             android:layout_marginEnd="@dimen/padding_margin_xlarge"
-            android:elevation="@dimen/padding_margin_xlarge"
-            android:textColor="@color/dark_gray"
-            android:textSize="@dimen/text_xlarge"
+            android:text="@string/open_pdf_manual"
+            android:textAllCaps="true"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_medium"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/bottom_panel_layout" />
+            app:layout_constraintTop_toBottomOf="@+id/add_cart_btn" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ScrollView
+        android:id="@+id/medicine_scroll_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/bottom_panel_layout">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/bottom_panel_layout"
+            android:id="@+id/product_constraint_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/product_image">
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/add_cart_btn"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/auth_button_height"
-                android:layout_marginEnd="@dimen/padding_margin_xlarge"
-                android:backgroundTint="@color/white"
-                android:textAllCaps="true"
-                android:text="@string/add_cart"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_medium"
-                app:layout_constraintBottom_toBottomOf="@+id/choose_count_layout"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/choose_count_layout" />
+            android:layout_height="wrap_content">
 
             <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/product_title"
-                android:layout_width="wrap_content"
+                android:id="@+id/product_description"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/padding_margin_xlarge"
                 android:layout_marginTop="@dimen/padding_margin_xlarge"
-                android:ellipsize="end"
-                android:maxLines="2"
-                android:text="Адицеф"
-                android:textColor="@color/black"
+                android:layout_marginEnd="@dimen/padding_margin_xlarge"
+                android:elevation="@dimen/padding_margin_xlarge"
+                android:textColor="@color/dark_gray"
                 android:textSize="@dimen/text_medium"
-                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/product_dosage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/padding_margin_medium"
-                android:ellipsize="end"
-                android:maxLines="2"
-                android:text="Капсулы 300x10"
-                android:textColor="@color/dark_gray"
-                android:textSize="@dimen/text_medium"
-                app:layout_constraintStart_toStartOf="@+id/product_title"
-                app:layout_constraintTop_toBottomOf="@+id/product_title" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/product_country"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/padding_margin_small"
-                android:ellipsize="end"
-                android:maxLines="2"
-                android:text="Палестина"
-                android:textColor="@color/dark_gray"
-                android:textSize="@dimen/text_medium"
-                app:layout_constraintStart_toEndOf="@+id/product_dosage"
-                app:layout_constraintTop_toTopOf="@+id/product_dosage" />
-
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/choose_count_layout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/padding_margin_medium"
-                android:layout_marginEnd="@dimen/padding_margin_xlarge"
-                android:background="@drawable/item_background"
-                app:cardCornerRadius="@dimen/padding_margin_medium"
-                app:layout_constraintEnd_toStartOf="@+id/add_cart_btn"
-                app:layout_constraintStart_toStartOf="@+id/product_dosage"
-                app:layout_constraintTop_toBottomOf="@+id/product_dosage">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/minus_btn"
-                        style="@style/RoundButton"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        app:icon="@drawable/ic_minus"
-                        app:iconSize="32dp" />
-
-                    <com.google.android.material.textview.MaterialTextView
-                        android:id="@+id/count_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/padding_margin_medium"
-                        android:layout_marginEnd="@dimen/padding_margin_medium"
-                        android:text="1"
-                        android:textSize="@dimen/text_medium" />
-
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/plus_btn"
-                        style="@style/RoundButton"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        app:icon="@drawable/ic_plus"
-                        app:iconSize="32dp" />
-
-
-                </LinearLayout>
-            </com.google.android.material.card.MaterialCardView>
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/product_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_medium"
-                app:layout_constraintBottom_toBottomOf="@+id/product_dosage"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.88"
-                app:layout_constraintStart_toEndOf="@+id/product_country"
-                app:layout_constraintTop_toTopOf="@+id/product_dosage" />
-
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.motion.widget.MotionLayout>
