--- a/app/src/main/res/layout/item_catalog.xml
+++ b/app/src/main/res/layout/item_catalog.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-     <data>
+    <data>
 
-    <variable
-        name="catalogData"
-        type="com.example.deliveryteka.data.models.CategoriesItem" />
-</data>
+        <variable
+            name="catalogData"
+            type="com.example.deliveryteka.data.models.CategoriesItem" />
+    </data>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/layout_item_catalog"
@@ -21,12 +20,12 @@
             android:id="@+id/categories_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{catalogData.category}"
             android:layout_margin="@dimen/padding_margin_xlarge"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginStart="@dimen/padding_margin_xlarge"
+            android:layout_marginEnd="@dimen/padding_margin_xlarge"
             android:ellipsize="end"
             android:maxLines="1"
+            android:text="@{catalogData.category}"
             android:textColor="@color/black"
             android:textSize="@dimen/text_large"
             app:layout_constraintBottom_toBottomOf="parent"
