--- a/app/src/main/res/layout/item_medicine_list.xml
+++ b/app/src/main/res/layout/item_medicine_list.xml
@@ -90,7 +90,7 @@
                 android:text="18.87"
                 android:textAllCaps="true"
                 android:textColor="@color/black"
-                android:textSize="@dimen/text_medium" />
+                android:textSize="13sp" />
 
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
