--- a/app/src/main/res/menu/app_menu.xml
+++ b/app/src/main/res/menu/app_menu.xml
@@ -16,6 +16,10 @@
             android:icon="@drawable/ic_order"
             android:title="@string/orders" />
         <item
+            android:id="@+id/covidFragment"
+            android:icon="@drawable/ic_covid_19"
+            android:title="@string/pandemic" />
+        <item
             android:id="@+id/basketFragment"
             android:icon="@drawable/ic_shopping_cart"
             android:title="@string/cart" />
