--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -13,8 +13,8 @@
         <action
             android:id="@+id/action_medicineListFragment_to_detailMedicineFragment"
             app:destination="@id/detailMedicineFragment"
-            app:enterAnim="@anim/from_left"
-            app:exitAnim="@anim/to_right"
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
             app:popEnterAnim="@anim/from_left"
             app:popExitAnim="@anim/to_right" />
     </fragment>
@@ -22,7 +22,15 @@
         android:id="@+id/catalogFragment"
         android:name="com.example.deliveryteka.fragments.catalog.CatalogFragment"
         android:label="Каталог"
-        tools:layout="@layout/fragment_catalog"/>
+        tools:layout="@layout/fragment_catalog">
+        <action
+            android:id="@+id/action_catalogFragment_to_medicineFromCategoryFragment"
+            app:destination="@id/medicineFromCategoryFragment"
+            app:enterAnim="@anim/from_left"
+            app:exitAnim="@anim/to_right"
+            app:popEnterAnim="@anim/from_right"
+            app:popExitAnim="@anim/to_left" />
+    </fragment>
     <fragment
         android:id="@+id/orderFragment"
         android:name="com.example.deliveryteka.fragments.order.OrderFragment"
@@ -38,15 +46,14 @@
         android:label="Корзина"
         tools:layout="@layout/fragment_basket" >
         <action
+            android:id="@+id/action_basketFragment_to_makeFillOrderFragment"
+            app:destination="@id/makeFillOrderFragment" />
+        <action
             android:id="@+id/action_basketFragment_to_medicineListFragment"
             app:destination="@id/medicineListFragment" />
         <action
             android:id="@+id/action_basketFragment_to_makeOrderFragment"
-            app:destination="@id/makeOrderFragment"
-            app:enterAnim="@anim/from_left"
-            app:exitAnim="@anim/to_right"
-            app:popEnterAnim="@anim/from_left"
-            app:popExitAnim="@anim/to_right" />
+            app:destination="@id/makeOrderFragment" />
     </fragment>
     <fragment
         android:id="@+id/favoriteListFragment"
@@ -56,6 +63,13 @@
         <action
             android:id="@+id/action_favoriteListFragment_to_medicineListFragment"
             app:destination="@id/medicineListFragment" />
+        <action
+            android:id="@+id/action_favoriteListFragment_to_favoriteFragment"
+            app:destination="@id/favoriteFragment"
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/to_right" />
     </fragment>
     <fragment
         android:id="@+id/userProfileFragment"
@@ -73,10 +87,16 @@
             android:id="@+id/action_userProfileFragment_to_changePasswordFragment"
             app:destination="@id/changePasswordFragment"
             app:enterAnim="@anim/from_left"
-            app:exitAnim="@anim/to_right" />
+            app:exitAnim="@anim/to_right"
+            app:popEnterAnim="@anim/from_right"
+            app:popExitAnim="@anim/to_left" />
         <action
             android:id="@+id/action_userProfileFragment_to_medicineCardInfoFragment"
-            app:destination="@id/medicineCardInfoFragment" />
+            app:destination="@id/medicineCardInfoFragment"
+            app:enterAnim="@anim/from_left"
+            app:exitAnim="@anim/to_right"
+            app:popEnterAnim="@anim/from_right"
+            app:popExitAnim="@anim/to_left" />
     </fragment>
     <fragment
         android:id="@+id/editProfileFragment"
@@ -88,6 +108,9 @@
             app:destination="@id/userProfileFragment"
             app:enterAnim="@anim/from_right"
             app:exitAnim="@anim/to_left" />
+        <argument
+            android:name="userInfo"
+            app:argType="com.example.deliveryteka.data.models.UserInfoItem" />
     </fragment>
     <fragment
         android:id="@+id/changePasswordFragment"
@@ -124,15 +147,17 @@
         <action
             android:id="@+id/action_makeOrderFragment_to_makeBankCardFragment"
             app:destination="@id/makeBankCardFragment"
-            app:enterAnim="@anim/from_left"
-            app:exitAnim="@anim/to_right"
-            app:popEnterAnim="@anim/from_left"
-            app:popExitAnim="@anim/to_right" />
+            app:enterAnim="@anim/from_bottom"
+            app:exitAnim="@anim/to_top"
+            app:popEnterAnim="@anim/from_top"
+            app:popExitAnim="@anim/to_bottom" />
         <action
-            android:id="@+id/action_makeOrderFragment_to_basketFragment"
-            app:destination="@id/basketFragment"
-            app:enterAnim="@anim/from_right"
-            app:exitAnim="@anim/to_left" />
+            android:id="@+id/action_makeOrderFragment_to_medicineListFragment"
+            app:destination="@id/medicineListFragment"
+            app:enterAnim="@anim/from_bottom"
+            app:exitAnim="@anim/to_top"
+            app:popEnterAnim="@anim/from_top"
+            app:popExitAnim="@anim/to_bottom" />
     </fragment>
     <fragment
         android:id="@+id/makeBankCardFragment"
@@ -140,15 +165,17 @@
         android:label="Банковская карта"
         tools:layout="@layout/fragment_make_bank_card">
         <action
-            android:id="@+id/action_makeBankCardFragment_to_makeOrderFragment"
-            app:destination="@id/makeOrderFragment"
-            app:enterAnim="@anim/from_right"
-            app:exitAnim="@anim/to_left" />
+            android:id="@+id/action_makeBankCardFragment_to_medicineListFragment"
+            app:destination="@id/medicineListFragment"
+            app:enterAnim="@anim/from_bottom"
+            app:exitAnim="@anim/to_top"
+            app:popEnterAnim="@anim/from_top"
+            app:popExitAnim="@anim/to_bottom" />
     </fragment>
     <fragment
         android:id="@+id/detailMedicineFragment"
         android:name="com.example.deliveryteka.fragments.home.detail.DetailMedicineFragment"
-        android:label="Препарат"
+        android:label="{title}"
         tools:layout="@layout/fragment_detail_medicine">
         <argument
             android:name="medicine"
@@ -156,5 +183,83 @@
         <action
             android:id="@+id/action_detailMedicineFragment_to_medicineListFragment"
             app:destination="@id/medicineListFragment" />
+        <argument
+            android:name="title"
+            app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/favoriteFragment"
+        android:name="com.example.deliveryteka.fragments.favorite.FavoriteFragment"
+        tools:layout="@layout/fragment_favorite"
+        android:label="{title}">
+        <argument
+            android:name="medicine"
+            app:argType="com.example.deliveryteka.data.models.MedicineInfo" />
+        <argument
+            android:name="title"
+            app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/covidFragment"
+        android:name="com.example.deliveryteka.CovidFragment"
+        android:label="COVID-19"
+        tools:layout="@layout/fragment_covid" />
+    <fragment
+        android:id="@+id/medicineFromCategoryFragment"
+        android:name="com.example.deliveryteka.fragments.catalog.recipe.MedicineFromCategoryRecipeFragment"
+        android:label="{title}"
+        tools:layout="@layout/fragment_medicine_from_category_recipe" >
+        <action
+            android:id="@+id/action_medicineFromCategoryFragment_to_detailMedicineCategoryFragment"
+            app:destination="@id/detailMedicineCategoryFragment"
+            app:enterAnim="@anim/from_left"
+            app:exitAnim="@anim/to_right"
+            app:popEnterAnim="@anim/from_right"
+            app:popExitAnim="@anim/to_left" />
+        <argument
+            android:name="title"
+            app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailMedicineCategoryFragment"
+        android:name="com.example.deliveryteka.fragments.catalog.recipe.DetailMedicineCategoryRecipeFragment"
+        android:label="{title}"
+        tools:layout="@layout/fragment_detail_medicine_category_recipe" >
+        <argument
+            android:name="medicine"
+            app:argType="com.example.deliveryteka.data.models.MedicineInfo" />
+        <argument
+            android:name="title"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_detailMedicineCategoryFragment_to_catalogFragment"
+            app:destination="@id/catalogFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/makeFillOrderFragment"
+        android:name="com.example.deliveryteka.fragments.basket.MakeFillOrderFragment"
+        android:label="Оформить заказ"
+        tools:layout="@layout/fragment_make_fill_order">
+        <action
+            android:id="@+id/action_makeFillOrderFragment_to_makeBankCardFragment"
+            app:destination="@id/makeBankCardFragment"
+            app:enterAnim="@anim/from_bottom"
+            app:exitAnim="@anim/to_top"
+            app:popEnterAnim="@anim/from_top"
+            app:popExitAnim="@anim/to_bottom" />
+        <action
+            android:id="@+id/action_makeFillOrderFragment_to_makeOrderFragment"
+            app:destination="@id/makeOrderFragment"
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/to_right" />
+        <action
+            android:id="@+id/action_makeFillOrderFragment_to_medicineListFragment"
+            app:destination="@id/medicineListFragment"
+            app:enterAnim="@anim/from_bottom"
+            app:exitAnim="@anim/to_top"
+            app:popEnterAnim="@anim/from_top"
+            app:popExitAnim="@anim/to_bottom" />
     </fragment>
 </navigation>
