--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -8,6 +8,7 @@
     <dimen name="padding_margin_xxxlarge">32dp</dimen>
 
     <dimen name="text_normal">18sp</dimen>
+    <dimen name="text_small">12sp</dimen>
     <dimen name="text_medium">14sp</dimen>
     <dimen name="text_large">18sp</dimen>
     <dimen name="text_xlarge">20sp</dimen>
